# ForMontee

./: .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: codeql.yml  macos.yml  pre-commit.yaml  ubuntu.yml  windows.yml
Docker/: Dockerfile  Makefile  docker_setup.sh
app/: CMakeLists.txt  DB.h  InteractiveTask.h  NetFunctionFactory.h  TasksFromConfig.cpp  TasksFromConfig.h  debug.h  main.cc
app/opencv/: CMakeLists.txt  DashboardDisplay.cpp  DashboardDisplay.h  README.MD  VideoCapture.cpp  VideoCapture.h  mocking.cpp  mocking.h
app/utils/: CMakeLists.txt  DB.cpp  DB.h  PeriodicTask.cpp  PeriodicTask.h  PriorityQ.h  PriorityQueueElement.h  SharedMemoryWrapper.cpp  SharedMemoryWrapper.h  SimpleBoostSharedMemory.cpp  SimpleBoostSharedMemory.h  Storage.h  ThreadUtil.cpp  ThreadUtil.h  debug.h  global_settings.h  logging.h  thread_safe_queue.h
cmake/: DetectSystem.cmake  Sanitizer.cmake
configured/: CMakeLists.txt  Doxyfile.in  config.hpp.in  tasks.yaml
docs/: Doxyfile
python/: access_data.py
src/: CMakeLists.txt
src/yaml_api/: CMakeLists.txt  build.sh  point.h  text.yaml  text.yaml.orig  yaml_api.cpp  yaml_api.cpp.bu  yaml_api.h
tests/: CMakeLists.txt  gtest_database.cpp  gtest_my_opencv.cpp  gtest_priority_queue.cpp  gtest_scheduled_task.cpp  gtest_simple_boost_shared_memory.cpp  gtest_yaml_api.cpp  text.yaml
